--- a/style.css
+++ b/style.css
@@ -58,6 +58,18 @@ body{
 .greetings > span:nth-child(10){
     animation-delay: 1.8s;
 }
+.greetings > span:nth-child(11){
+    animation-delay: 2.0s;
+}
+.greetings > span:nth-child(12){
+    animation-delay: 2.2s;
+}
+.greetings > span:nth-child(13){
+    animation-delay: 2.4s;
+}
+.greetings > span:nth-child(14){
+    animation-delay: 2.6s;
+}
 
 .description{
     font-size: 1.5rem;
